--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -34,7 +34,6 @@ header,
 
 
 
-
 html {
     scroll-behavior: smooth;
   }
@@ -67,7 +66,7 @@ html {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url('../images/preloader.gif') center no-repeat #fff;
+    background: url('../images/preloader3.gif') center no-repeat #000;
 }
 
 /*---------- preloader css ends -------------*/
